Button + drop down

--- a/web/KistenschiebenView.html
+++ b/web/KistenschiebenView.html
@@ -2,13 +2,31 @@
 
 <html>
   <head>
-  	<meta charset="utf-8">
+      <meta charset="utf-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <meta name="scaffolded-by" content="https://github.com/google/stagehand">
     <title>KistenschiebenView</title>
    <script type="application/dart" src="../lib/src/KistenschiebenController.dart"></script>
-   <script src="packages/browser/dart.js"></script>
+      <script defer src="packages/browser/dart.js"></script>
      <link rel="stylesheet" type="text/css" href="KistenschiebenView.css"/>
   </head>
-  <body> 
+  <body>
+  <h1>Kistenschieben</h1>
+  <div><button id="b1"> Load Level</button>
+      <select name="levels">
+          <option id="id1">Level 1</option>
+          <option>Level 2</option>
+          <option>Level 3</option>
+          <option>Level 4</option>
+          <option>Level 5</option>
+          <option>Level 6</option>
+          <option>Level 7</option>
+          <option>Level 8</option>
+          <option>Level 9</option>
+          <option>Level 10</option>
+      </select>
+  </div>
   <level></level>  
   </body>
 </html>
