Umstrukturierung der Main, hinzufügen der Gamekeyanbindung

--- a/web/KistenschiebenView.html
+++ b/web/KistenschiebenView.html
@@ -7,7 +7,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta name="scaffolded-by" content="https://github.com/google/stagehand">
     <title>KistenschiebenView</title>
-   <script type="application/dart" src="../lib/src/KistenschiebenController.dart"></script>
+   <script type="application/dart" src="Main.dart"></script>
       <script defer src="packages/browser/dart.js"></script>
      <link rel="stylesheet" type="text/css" href="KistenschiebenView.css"/>
   </head>
