--- a/web/KistenschiebenView.html
+++ b/web/KistenschiebenView.html
@@ -13,20 +13,16 @@
   </head>
   <body>
   <h1>Kistenschieben</h1>
-  <div><button id="b1"> Load Level</button>
+ <button id="b1_1">Registrieren</button><button id="b1_2">Anmelden</button><button id="b1_3">Ohne Anmeldung spielen</button><div id="userstatus">Userstatus: nicht Angemeldet</div>
+  <div><button id="b4"> Load Level</button>
       <select name="levels">
           <option id="id1">Level 1</option>
-          <option>Level 2</option>
-          <option>Level 3</option>
-          <option>Level 4</option>
-          <option>Level 5</option>
-          <option>Level 6</option>
-          <option>Level 7</option>
-          <option>Level 8</option>
-          <option>Level 9</option>
-          <option>Level 10</option>
       </select>
+
   </div>
-  <level></level>  
+  <div><button id="b5">Show States</button><div id="win"><win></win></div></div>
+  <div id="lvl"><level></level></div>
+  <div id="states"><states></states></div>
+
   </body>
 </html>
