nächstes Lvl laden, gamekey Verbindung steht

--- a/web/KistenschiebenView.html
+++ b/web/KistenschiebenView.html
@@ -17,6 +17,7 @@
 <button id="login">Anmelden</button>
 <button id="wOLogin">Ohne Anmeldung spielen</button>
 <div id="userstatus">Userstatus: nicht Angemeldet</div>
+<div id="gamekeystatus">Gamekeystatus: nicht Verbunden</div>
 <div>
     <button id="loadLvl">Load Level</button>
     <select name="levels">
