--- a/web/KistenschiebenView.html
+++ b/web/KistenschiebenView.html
@@ -35,7 +35,7 @@
     <level></level>
 </div>
 <div id="states">
-    <states></states>
+    <states>Moves: 0___________________Pushes: 0____________________Time: 0:0</states>
 </div>
 </body>
 </html>
