--- a/web/KistenschiebenView.html
+++ b/web/KistenschiebenView.html
@@ -17,14 +17,18 @@
 </span>
 <div id="container"></div>
 <div id="start"></div>
-<div id="userstatus">Userstatus: nicht Angemeldet</div>
+<div id="userstatus">
+    <button id="b5">Reset</button>
+    Userstatus: nicht Angemeldet
+</div>
 <div id="gamekeystatus">Gamekeystatus: nicht Verbunden</div>
 <div id="login"></div>
+<div id="logedin"></div>
 <div id="userinput"></div>
+<div id="edituser"></div>
 <div id="lvl">
     <level></level>
 </div>
-<div id="example"></div>
 <div id="states">
     <states></states>
 </div>
