Anmedlung Regisrierung Funktioniert

--- a/web/KistenschiebenView.html
+++ b/web/KistenschiebenView.html
@@ -17,20 +17,22 @@
 </span>
 <div id="container"></div>
 <div id="start"></div>
-<div id="userstatus">
-    <button id="b5">Reset</button>
-    Userstatus: nicht Angemeldet
+<div id="userstatus">Userstatus: nicht Angemeldet</div>
+<div id="reset">
+    <button id="resetbutton">Reset</button>
 </div>
 <div id="gamekeystatus">Gamekeystatus: nicht Verbunden</div>
+
 <div id="login"></div>
 <div id="logedin"></div>
 <div id="userinput"></div>
 <div id="edituser"></div>
 <div id="lvl">
     <level></level>
+    <div id="stat">
+        <stat></stat>
+    </div>
 </div>
-<div id="states">
-    <states></states>
-</div>
+
 </body>
 </html>
