Alle Versionen gemerged, wir hoffen das keine schlimmen Dinge passiert sind! Die skalierung verursacht immernoch lücken zwischen den elementen. Das lvl wird beim laden nicht mehr skaliert, man muss erstmal einen move machen damit das lvl skaliert wird, das müssstet ihr noch einmal fixen, wir wissen nicht wie das zustande gekommen ist. Des Weiteren haben wir die alte Kistenliste und alle damit zusammenhängenden Positions-Methoden, auch die vom Player, entfernt.

--- a/web/KistenschiebenView.html
+++ b/web/KistenschiebenView.html
@@ -17,9 +17,9 @@
 </span>
 <div id="container"></div>
 <div id="start"></div>
-<div id="userstatus">
-    <button id="b5">Reset</button>
-    Userstatus: nicht Angemeldet
+<div id="userstatus">Userstatus: nicht Angemeldet</div>
+<div id="reset">
+    <button id="resetbutton">Reset</button>
 </div>
 <div id="gamekeystatus">Gamekeystatus: nicht Verbunden</div>
 <div id="login"></div>
