--- a/web/KistenschiebenView.html
+++ b/web/KistenschiebenView.html
@@ -22,11 +22,11 @@
     <button id="resetbutton">Reset</button>
 </div>
 <div id="gamekeystatus">Gamekeystatus: nicht Verbunden</div>
-
 <div id="login"></div>
-<div id="logedin"></div>
+<div id="registered"></div>
 <div id="userinput"></div>
 <div id="edituser"></div>
+<div id="about"></div>
 <div id="lvl">
     <level></level>
     <div id="stat">
