--- a/web/KistenschiebenView.html
+++ b/web/KistenschiebenView.html
@@ -17,17 +17,18 @@
 </span>
 <div id="container"></div>
 <div id="start"></div>
-<div id="userstatus">Userstatus: nicht Angemeldet</div>
-<div id="reset">
-    <button id="resetbutton">Reset</button>
-</div>
-<div id="gamekeystatus">Gamekeystatus: nicht Verbunden</div>
-<div id="login"></div>
 <div id="registered"></div>
 <div id="userinput"></div>
 <div id="edituser"></div>
 <div id="about"></div>
 <div id="lvl">
+    <div>
+        <userstatus id="userstatus">Userstatus: nicht Angemeldet</userstatus>
+    </div>
+    <span><gamekeystatus>Gamekeystatus: nicht Verbunden</gamekeystatus></span>
+    <reset>
+        <button id="resetbutton">Reset</button>
+    </reset>
     <level></level>
     <div id="stat">
         <stat></stat>
