change: doublelayer gamefield => fixed scaling

--- a/web/KistenschiebenView.html
+++ b/web/KistenschiebenView.html
@@ -24,13 +24,19 @@
     <gamekeystatus id="gamekeystatus">Gamekeystatus: Not connected</gamekeystatus>
     <messagefield id="messagefield" placeholder="messagefield"></messagefield>
 </div>
-<div>
+<div id="level">
     <div id="leveloptions">
         <button id="resetbutton">Reset</button>
         <button id="skipbutton">Skip</button>
     </div>
-    <level></level>
-    <stat id="stat"></stat>
+    <div>
+        <objectlayer id="objectlayer"></objectlayer>
+    </div>
+    <div>
+        <groundlayer id="groundlayer"></groundlayer>
+    </div>
+    <div id="stat"></div>
+
 </div>
 </body>
 </html>
