--- a/web/KistenschiebenView.html
+++ b/web/KistenschiebenView.html
@@ -18,11 +18,11 @@
 <div id="registered"></div>
 <div id="userinput"></div>
 <div id="edituser"></div>
-<div id="about"></div>
+<div id="about" class=""></div>
 <div id="status">
-    <userstatus id="userstatus">Userstatus: Not registered</userstatus>
+    <userstatus id="userstatus">Userstatus: Not logged in</userstatus>
     <gamekeystatus id="gamekeystatus">Gamekeystatus: Not connected</gamekeystatus>
-    <messagefield id="messagefield" placeholder="messagefield"></messagefield>
+    <messagefield id="messagefield"></messagefield>
 </div>
 <div id="level">
     <div id="leveloptions">
