changelog: Cratebug on "S" fixed, pullfunction enabled

--- a/web/KistenschiebenView.html
+++ b/web/KistenschiebenView.html
@@ -27,7 +27,7 @@
 <div id="level">
     <div id="leveloptions">
         <button id="resetbutton">Reset</button>
-        <button id="skipbutton">Skip</button>
+        <button id="pullbutton">pull gloves(0)</button>
     </div>
     <div>
         <objectlayer id="objectlayer"></objectlayer>
@@ -35,8 +35,10 @@
     <div>
         <groundlayer id="groundlayer"></groundlayer>
     </div>
-    <div id="stat"></div>
-
+    <div>
+        <stats id="stat"></stats>
+    </div>
+    </div>
 </div>
 </body>
 </html>
