Code wird angezeigt und das level kann anhand des codes bestimmt werden

--- a/web/KistenschiebenView.html
+++ b/web/KistenschiebenView.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" type="text/css" href="KistenschiebenView.css"/>
 </head>
 <body>
-<h1>Kistenschieben</h1>
+<h1 id="header">Kistenschieben</h1>
 <div id="container"></div>
 <div id="start"></div>
 <div id="registered"></div>
