--- a/web/KistenschiebenView.html
+++ b/web/KistenschiebenView.html
@@ -26,14 +26,17 @@
 </div>
 <div id="level">
     <div id="leveloptions">
-        <button id="resetbutton">Reset</button>
-        <button id="pullbutton">pull gloves(0)</button>
+        <span><button id="resetbutton">Reset</button></span>
+        <span id="push"><button id="pushbutton">PushPower(1)</button></span>
+        <span><button id="pullbutton">pull gloves(0)</button></span>
     </div>
-    <div>
-        <objectlayer id="objectlayer"></objectlayer>
-    </div>
-    <div>
-        <groundlayer id="groundlayer"></groundlayer>
+    <div id="fieldlevel">
+        <div>
+            <objectlayer id="objectlayer"></objectlayer>
+        </div>
+        <div>
+            <groundlayer id="groundlayer"></groundlayer>
+        </div>
     </div>
     <div>
         <stats id="stat"></stats>
