--- a/web/KistenschiebenView.html
+++ b/web/KistenschiebenView.html
@@ -27,7 +27,7 @@
 <div id="level">
     <div id="leveloptions">
         <span><button id="resetbutton">Reset</button></span>
-        <span id="push"><button id="pushbutton">PushPower(1)</button></span>
+        <span id="push"><button id="pushbutton">Steroids(1)</button></span>
         <span><button id="pullbutton">pull gloves(0)</button></span>
     </div>
     <div id="fieldlevel">
