changelog: about done

--- a/web/KistenschiebenView.html
+++ b/web/KistenschiebenView.html
@@ -18,7 +18,7 @@
 <div id="registered"></div>
 <div id="userinput"></div>
 <div id="edituser"></div>
-<div id="about" class=""></div>
+<div id="about"></div>
 <div id="status">
     <userstatus id="userstatus">Userstatus: Not logged in</userstatus>
     <gamekeystatus id="gamekeystatus">Gamekeystatus: Not connected</gamekeystatus>
@@ -26,9 +26,11 @@
 </div>
 <div id="level">
     <div id="leveloptions">
-        <span><button id="resetbutton">Reset</button></span>
-        <span id="push"><button id="pushbutton">PushPower(1)</button></span>
-        <span><button id="pullbutton">pull gloves(0)</button></span>
+        <div id="gamebuttons">
+            <button id="resetbutton">Reset</button>
+            <button id="pushbutton">Steroids(0)</button>
+            <button id="pullbutton">Sticky gloves(0)</button>
+        </div>
     </div>
     <div id="fieldlevel">
         <div>
