changelog: bugfix steroids

--- a/web/KistenschiebenView.html
+++ b/web/KistenschiebenView.html
@@ -13,12 +13,12 @@
 </head>
 <body>
 <h1 id="header">Kistenschieben</h1>
-<div id="container"></div>
 <div id="start"></div>
 <div id="registered"></div>
 <div id="userinput"></div>
 <div id="edituser"></div>
 <div id="about"></div>
+<div id="win"></div>
 <div id="status">
     <userstatus id="userstatus">Userstatus: Not logged in</userstatus>
     <gamekeystatus id="gamekeystatus">Gamekeystatus: Not connected</gamekeystatus>
@@ -41,7 +41,7 @@
         </div>
     </div>
     <div>
-        <stats id="stat"></stats>
+        <statistics id="statistics"></statistics>
     </div>
     </div>
 </div>
