changelog: fixed resetbug

--- a/web/KistenschiebenView.html
+++ b/web/KistenschiebenView.html
@@ -27,7 +27,7 @@
 <div id="level">
     <div id="gamebuttons">
         <button id="pullbutton">Sticky gloves(0)</button>
-        <button id="resetbutton">Reset</button>
+        <button id="resetbutton">Reset(&#x2190)</button>
         <button id="pushbutton">Steroids(0)</button>
     </div>
     <div id="fieldlevel">
