changelog: fixed resetbug

--- a/web/KistenschiebenView.html
+++ b/web/KistenschiebenView.html
@@ -26,9 +26,9 @@
 </div>
 <div id="level">
     <div id="gamebuttons">
-        <button id="pullbutton">Sticky gloves(0)</button>
+        <button id="pullbutton">Sticky gloves(0)(G)</button>
         <button id="resetbutton">Reset(&#x2190)</button>
-        <button id="pushbutton">Steroids(0)</button>
+        <button id="pushbutton">Steroids(0)(P)</button>
     </div>
     <div id="fieldlevel">
         <div>
